--- a/index.html
+++ b/index.html
@@ -1,92 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | FAQ Accordion Card</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-        margin-top: 30px;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+            margin-top: 30px;
+        }
+        
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
-      <div class="header">
-        <picture>
-          <source
-            srcset="images/illustration-woman-online-desktop.svg"
-            media="(min-width: 1140px)"
-          />
-          <img src="images/illustration-woman-online-mobile.svg" />
-        </picture>
-        <img src="images/illustration-box-desktop.svg" alt="" class="box" />
-        <img src="images/bg-pattern-mobile.svg" alt="" class="shadow" />
-      </div>
-      <div class="faq">
-        <h1>FAQ</h1>
+        <div class="header">
+            <picture>
+                <source srcset="images/illustration-woman-online-desktop.svg" media="(min-width: 1140px)" />
+                <img src="images/illustration-woman-online-mobile.svg" />
+            </picture>
+            <img src="images/illustration-box-desktop.svg" alt="" class="box" />
+            <img src="images/bg-pattern-mobile.svg" alt="" class="shadow" />
+        </div>
+        <div class="faq">
+            <h1>FAQ</h1>
 
-        <button class="accordion">How many team members can I invite?</button>
-        <div class="panel">
-          <p>
-            You can invite up to 2 additional users on the Free plan. There is
-            no limit on team members for the Premium plan.
-          </p>
-        </div>
-        <button class="accordion">What is the maximum file upload size?</button>
-        <div class="panel">
-          <p>
-            No more than 2GB. All files in your account must fit your allotted
-            storage space.
-          </p>
-        </div>
-        <button class="accordion">How do I reset my password?</button>
-        <div class="panel">
-          <p>
-            Click “Forgot password” from the login page or “Change password”
-            from your profile page. A reset link will be emailed to you.
-          </p>
-        </div>
-        <button class="accordion">Can I cancel my subscription?</button>
-        <div class="panel">
-          <p>
-            Yes! Send us a message and we’ll process your request no questions
-            asked.
-          </p>
-        </div>
+            <button class="accordion">How many team members can I invite?</button>
+            <div class="panel">
+                <p>
+                    You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.
+                </p>
+            </div>
+            <button class="accordion">What is the maximum file upload size?</button>
+            <div class="panel">
+                <p>
+                    No more than 2GB. All files in your account must fit your allotted storage space.
+                </p>
+            </div>
+            <button class="accordion">How do I reset my password?</button>
+            <div class="panel">
+                <p>
+                    Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.
+                </p>
+            </div>
+            <button class="accordion">Can I cancel my subscription?</button>
+            <div class="panel">
+                <p>
+                    Yes! Send us a message and we’ll process your request no questions asked.
+                </p>
+            </div>
 
-        <button class="accordion">Do you provide additional support?</button>
-        <div class="panel">
-          <p>
-            Chat and email support is available 24/7. Phone lines are open
-            during normal business hours.
-          </p>
+            <button class="accordion">Do you provide additional support?</button>
+            <div class="panel">
+                <p>
+                    Chat and email support is available 24/7. Phone lines are open during normal business hours.
+                </p>
+            </div>
         </div>
-      </div>
     </div>
 
     <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Alejandro Arias</a>.
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a
+      >. Coded by <a href="https://www.aleckbeu.com">aleckbeu</a>.
     </div>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
